# projet_ventes_mle

./: .gitignore  pyproject.toml
scripts/: extract_sales_data.py  test_db_connection.py
tests/: test_projet_ventes_mle.py
